assets/css/main.css
/* ... */
		input[type="submit"].small,
		input[type="reset"].small,
		input[type="button"].small,
		button.small,
		.button.small {
			font-size: 0.8rem;
			height: 2.4375rem;
			line-height: 2.71375rem;
			padding: 0 1.25rem;
		}

		input[type="submit"].large,
		input[type="reset"].large,
		input[type="button"].large,
		button.large,
		.button.large {
			font-size: 1.25rem;
			height: 4.0625rem;
			line-height: 4.225rem;
			padding: 0 4rem 0 4rem;
		}

		input[type="submit"].wide,
		input[type="reset"].wide,
		input[type="button"].wide,
		button.wide,
		.button.wide {
			min-width: 13rem;
		}

		input[type="submit"].icon:before,
		input[type="reset"].icon:before,
		input[type="button"].icon:before,
		button.icon:before,
		.button.icon:before {
			margin-right: 0.5rem;
		}

		input[type="submit"].fit,
		input[type="reset"].fit,
		input[type="button"].fit,
		button.fit,
		.button.fit {
			width: 100%;
		}

		input[type="submit"].disabled, input[type="submit"]:disabled,
		input[type="reset"].disabled,
		input[type="reset"]:disabled,
		input[type="button"].disabled,
		input[type="button"]:disabled,
		button.disabled,
		button:disabled,
		.button.disabled,
		.button:disabled {
			pointer-events: none;
			opacity: 0.25;
		}

		@media screen and (max-width: 980px) {

			input[type="submit"].large,
			input[type="reset"].large,
			input[type="button"].large,
			button.large,
			.button.large {
				font-size: 1rem;
				height: 3.25rem;
				line-height: 3.25rem;
				padding: 0 4rem 0 4rem;
			}

		}

	input[type="submit"],
	input[type="reset"],
	input[type="button"],
	button,
	.button {
		background-color: transparent;
		box-shadow: inset 0 0 0 1px #282828;
		color: #282828 !important;
	}

		input[type="submit"]:hover,
		input[type="reset"]:hover,
		input[type="button"]:hover,
		button:hover,
		.button:hover {
			background-color: rgba(0, 0, 0, 0.075);
			box-shadow: inset 0 0 0 1px rgba(40, 40, 40, 0.5);
		}

			input[type="submit"]:hover:active,
			input[type="reset"]:hover:active,
			input[type="button"]:hover:active,
			button:hover:active,
			.button:hover:active {
				background-color: rgba(0, 0, 0, 0.05);
				box-shadow: inset 0 0 0 1px #282828;
			}

		input[type="submit"].primary,
		input[type="reset"].primary,
		input[type="button"].primary,
		button.primary,
		.button.primary {
			background-color: #4468ca;
			box-shadow: none;
			color: #ffffff !important;
		}

			input[type="submit"].primary:hover,
			input[type="reset"].primary:hover,
			input[type="button"].primary:hover,
			button.primary:hover,
			.button.primary:hover {
				background-color: #5878d0;
				box-shadow: none;
			}

				input[type="submit"].primary:hover:active,
				input[type="reset"].primary:hover:active,
				input[type="button"].primary:hover:active,
				button.primary:hover:active,
				.button.primary:hover:active {
					background-color: #365bbf;
				}

/* Form */

	form {
		display: -moz-flex;
		display: -webkit-flex;
		display: -ms-flex;
		display: flex;
		-moz-flex-wrap: wrap;
		-webkit-flex-wrap: wrap;
		-ms-flex-wrap: wrap;
		flex-wrap: wrap;
		width: 100%;
		margin: -2rem auto 2rem auto;
	}

		form.elements {
			display: block;
			margin: 0 0 2rem 0;
		}

		form > .field {
			-moz-flex-grow: 0;
			-webkit-flex-grow: 0;
			-ms-flex-grow: 0;
			flex-grow: 0;
			-moz-flex-shrink: 0;
			-webkit-flex-shrink: 0;
			-ms-flex-shrink: 0;
			flex-shrink: 0;
			padding: 2rem 0 0 2rem;
			width: calc(100% - 2rem);
		}

			form > .field.half {
				width: calc(50% - 1rem);
			}

			form > .field.third {
				width: calc(100%/3 - 0.66667rem);
			}

			form > .field.quarter {
				width: calc(25% - 0.5rem);
			}

		form ul.actions {
			margin-bottom: 0;
		}

		form.alt {
			display: block;
			width: 100%;
			margin: 0 0 2rem 0;
		}

			form.alt > .actions {
				margin: 0 0 2rem 0;
				width: 100%;
			}

		@media screen and (max-width: 736px) {

			form {
				margin: -1.5rem auto 2rem auto;
			}

				form > .field {
					padding: 1.5rem 0 0 1.5rem;
					width: calc(100% - 1.5rem);
				}

					form > .field.half {
						width: calc(100% - 1.5rem);
					}

					form > .field.third {
						width: calc(100% - 1.5rem);
					}

					form > .field.quarter {
						width: calc(100% - 1.5rem);
					}

				form > .actions {
					margin: 1.5rem 0 0 1.5rem;
					width: calc(100% - 3rem);
				}

		}

	input[type="text"],
	input[type="password"],
	input[type="email"],
	input[type="tel"],
	input[type="search"],
	input[type="url"],
	select,
	textarea {
		-moz-appearance: none;
		-webkit-appearance: none;
		-ms-appearance: none;
		appearance: none;
		border-radius: 4px;
		border: none;
		border: solid 1px;
		color: inherit;
		display: block;
		outline: 0;
		padding: 0 1rem;
		text-decoration: none;
		width: 100%;
	}

		input[type="text"]:invalid,
		input[type="password"]:invalid,
		input[type="email"]:invalid,
		input[type="tel"]:invalid,
		input[type="search"]:invalid,
		input[type="url"]:invalid,
		select:invalid,
		textarea:invalid {
			box-shadow: none;
		}

	label {
		display: block;
		font-size: 1rem;
		font-weight: 400;
		margin: 0 0 1rem 0;
	}

	input[type="text"],
	input[type="password"],
	input[type="email"],
	input[type="tel"],
	input[type="search"],
	input[type="url"] {
		height: 3.25rem;
	}

	select {
		background-size: 1.25rem;
		background-repeat: no-repeat;
		background-position: calc(100% - 1rem) center;
		height: 3.25rem;
		padding-right: 3.25rem;
		text-overflow: ellipsis;
	}

		select:focus::-ms-value {
			background-color: transparent;
		}

		select::-ms-expand {
			display: none;
		}

	textarea {
		padding: 0.75rem 1rem;
	}

	input[type="checkbox"],
	input[type="radio"] {
		-moz-appearance: none;
		-webkit-appearance: none;
		-ms-appearance: none;
		appearance: none;
		display: block;
		float: left;
		margin-right: -2rem;
		opacity: 0;
		width: 1rem;
		z-index: -1;
	}
/* ... */

